# svg-gen

./: .gitignore  Makefile  README.md  distributed-memory.scm  entangled.dhall  entangled.toml  example1.scm  graph-lang.scm  lib.scm  memory-architecture.scm  pyproject.toml  shared-memory.scm  xml-gen.scm
.entangled/: db.sqlite
docs/: index.html  theme.css
examples/: mapping.scm  pythagoras.css  pythagoras.scm  stencil.scm  style.css
format/: format.scm
lit/: stdlib.md
monads/: maybe.scm  monads.scm  support.scm  syntax.scm
parsing/: parsing.scm  text-cursors.scm
utility/: algorithms.scm  aux-keyword.scm  cut.scm  pmatch.scm  receive.scm
